syntax = "proto3";

package auth;

import "commons.proto";

message UserInfo {
  string id = 1;
  string username = 2;
  string email = 3;
  int64 acsId = 4;
}

message LoginRequest {
  string username = 1; // username or email
  string password = 2;
  string deviceId = 3; // optional
  string ipAddress = 4; // optional
  string userAgent = 5; // optional
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
  int64 expiresIn = 3; // seconds
  UserInfo user = 4;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message RefreshTokenResponse {
  string accessToken = 1;
  string refreshToken = 2;
  int64 expiresIn = 3;
}

message LogoutRequest {
  string refreshToken = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool isValid = 1;
  string userId = 2;
  int64 expiresAt = 3;
}

service AuthService {
  rpc login (LoginRequest) returns (LoginResponse) {}
  rpc logout (LogoutRequest) returns (commons.Count) {}
  rpc refreshToken (RefreshTokenRequest) returns (RefreshTokenResponse) {}
  rpc validateToken (ValidateTokenRequest) returns (ValidateTokenResponse) {}
  rpc revokeToken (LogoutRequest) returns (commons.Count) {}
}

