syntax = "proto3";

package users;

import "commons.proto";

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string passwordHash = 4;
  int64 acsId = 5;
  string createdAt = 6;
  string updatedAt = 7;
  string deletedAt = 8;
  int32 version = 9;
  string createdBy = 10;
  string updatedBy = 11;
  int32 isActive = 12;
}

message UserProfile {
  string id = 1;
  string userId = 2;
  string firstName = 3;
  string lastName = 4;
  string phone = 5;
  string avatarUrl = 6;
  string bio = 7;
  string dateOfBirth = 8;
  string address = 9;
  string createdAt = 10;
  string updatedAt = 11;
  string deletedAt = 12;
  int32 version = 13;
  string createdBy = 14;
  string updatedBy = 15;
  int32 isActive = 16;
}

message CreateUserInput {
  string username = 1;
  string email = 2;
  string password = 3;
  int64 acsId = 4;
  string firstName = 5;
  string lastName = 6;
  string phone = 7;
}

message UpdateUserInput {
  string id = 1;
  string email = 2;
  int64 acsId = 3;
}

message UpdateUserProfileInput {
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
  string phone = 4;
  string avatarUrl = 5;
  string bio = 6;
  string dateOfBirth = 7;
  string address = 8;
}

message UserList {
  repeated User data = 1;
}

message UserWithProfile {
  User user = 1;
  UserProfile profile = 2;
}

service UsersService {
  rpc findAll (commons.Query) returns (UserList) {}
  rpc findById (commons.Id) returns (User) {}
  rpc findByUsername (commons.Name) returns (User) {}
  rpc findByEmail (commons.Name) returns (User) {}
  rpc findByAcsId (commons.Id) returns (User) {}
  rpc findByIdWithProfile (commons.Id) returns (UserWithProfile) {}
  rpc count (commons.Query) returns (commons.Count) {}
  rpc create (CreateUserInput) returns (User) {}
  rpc update (UpdateUserInput) returns (User) {}
  rpc updateProfile (UpdateUserProfileInput) returns (UserProfile) {}
  rpc destroy (commons.Id) returns (commons.Count) {}
}

